added bloom filter

--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,16 @@
             <version>1.18.20</version>
             <scope>provided</scope>
         </dependency>
-<!--        add jupiter-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.8.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
         </dependency>
     </dependencies>
 
